--- a/style.css
+++ b/style.css
@@ -1,1 +1,3 @@
-
+body {background-color; #3 e F A F 7; text-aling: justify; font-size: 18px;}
+h1 { text-align: center;back background-color:#2FBDBA;color:#17313B;}
+H3{text-align: justify; color: #1F7A79;}
