--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
-body {background-color; #3 e F A F 7; text-aling: justify; font-size: 18px;}
-h1 { text-align: center;back background-color:#2FBDBA;color:#17313B;}
-H3{text-align: justify; color: #1F7A79;}
+body{ background-color:#3efaf7;text align: justify;font-size:18 px;}
+h1{text-align: center;background-color: #2FBDA:color:#173138;}
+h3{text-align: justify;color:#1F7279;}
+b{ color:blue;font size:18px;}
+i{ color:blue;font size:18px;}
+header,footer{background-color: #499CBA;color:#ceefc;text align:center;font size:20px:}
+main{background-color: #8ddefc;}
+.primeiroparagrafo{ text-align: justify;font size: 18px;border:block solid 2px:p2dding:10px:margin:10px;}
+.segundoparagrafo { text-align: justify: font size 18px;border:black solid 2px:padding 10px;margin:10px;}
+#tituloimagem { width:5%;height: 5%;}
+#lista{display :inline-block}
